Revision history for Pod-PerldocJp

0.06 to be released
  - added env_proxy (mattn's request)

0.05  2009/11/28
  - there were still modules to spit warnings.

0.04  2009/11/28
  - use system's temporary directory to store Japanese pods
    if the share directory for this module is not writable.
  - fixed wrapper (hopefully).

0.03  2009/11/25
  - oops, the previous fix was totally wrong.
    tentatively stopped joining split words.

0.02  2009/11/25
  - fixed infinite loop
  - fixed pod

0.01  2009/11/21
  - initial release