@@ -1,6 +1,7 @@
 Revision history for Pod-PerldocJp
 
 0.06 to be released
+  - switched to use File::HomeDir
   - added env_proxy (mattn's request)
 
 0.05  2009/11/28
